--- a/src/styles.css
+++ b/src/styles.css
@@ -50,6 +50,10 @@ div, p {
 
 .top-container .content {
   border-radius: 0 40px 40px 0;
+  padding-right: 30px;
+  padding-left: 100px;
+  position: relative;
+  left: -80px;
 }
 
 .middle-container .content {
@@ -59,6 +63,10 @@ div, p {
 
 .bottom-container .content {
   border-radius: 40px 0 0 40px;
+  padding-right: 100px;
+  padding-left: 30px;
+  position: relative;
+  left: 80px;
 }
 
 p {
